# numerical_methods

./: README.md
lab1/: CMakeLists.txt
lab1/data/: Maple разложение в ряд.mw  отчет Акмурзин ЛР№1.docx  отчет.docx  пояснения к ЛР1.docx
lab1/src/: main.cpp  task1.h  task2.h  task3.h  task4.h  task5.h  task6.h
lab1/src/plot/: plotTask1.py  plot_1.py  plot_2.py  plot_3.py  plot_5.py  plot_6.py
lab2/: CMakeLists.txt
lab2/data/: отчет.docx  пояснения к ЛР 2.docx
lab2/src/: integral.py  main.cpp  task1.h  task2.h  task3.h  task4.h  task5.h  task6.h
lab2/src/plot/: plot_1.py  plot_2.py  plot_4.py  plot_6.py
lab3/: CMakeLists.txt
lab3/data/: отчет Акмурзин ЛР№3.docx  отчет.docx
lab3/src/: main.cpp  task.h  task1.cpp  task2.cpp  task3.cpp  task4.cpp
lab3/src/plot/: task1.py  task2.py  task3.py
lab4/: CMakeLists.txt
lab4/data/: отчет.docx  пояснения к ЛР 4.docx
lab4/src/: check_minimum.py  main.cpp  task.h  task1.cpp  task2.cpp  task3.cpp
lab4/src/plot/: task2.py
lab5/: CMakeLists.txt
lab5/data/: отчет.docx
lab5/src/: Methods.h  main.cpp
